--- a/the_loops _loop/Bangcuuchuong.html
+++ b/the_loops _loop/Bangcuuchuong.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <script src="/the_loops _loop.js"></script>
+    <script src="/Bangcuuchuong.js"></script>
 </body>
 
 </html>
