--- a/casestudy/index.html
+++ b/casestudy/index.html
@@ -41,9 +41,6 @@
     </header>
 
     <main>
-     
-
-
         </div>
         <div id="Products"></div>
         </div>
@@ -70,13 +67,9 @@
             <p style="font-weight: bold; font-size: 25px; margin-top: 30px;" type="number" name="" >Tổng tiền <span id="price-total">0</span></p>
         </div>
         <div class="ButtonBuy">
-            <button onclick="ChuaHoanThien()">Thanh Toán</button>
+            <button onclick="DaHoanThien()">Thanh Toán</button>
         </div>
-
-
         <script src="casestudy.js"></script>
-
-
     </main>
 </body>
 </html>
